# delta-to-json

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  parser_logic.py  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  config.py  database.py  models.py  schemas.py
app/auth/: __init__.py  jwt.py  oauth.py  router.py
app/history/: __init__.py  router.py  service.py
docs/: DEPLOYMENT.md  EXTERNAL_ACCESS_TODO.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: deploy.sh  runner-setup.sh  server-setup.sh
templates/: index.html
